# yew_page_updated

./: Cargo.toml  README.md  index.html
src/: app.rs  lib.rs
src/components/: mod.rs  paintbar.rs
src/css/: canvas.rs  home.rs  manipulation.rs  mdpages.rs  mod.rs  paintbar.rs  styles.rs  tranform_func.rs
src/pages/: canvas.rs  home.rs  manipulation.rs  mdpages.rs  mod.rs
src/webgl_components/: colorwheel.rs  colorwheel.vert  mod.rs
