[package]
name = "yew_page"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
route = "0.2.0"
yew = { version = "0.20.0", features = ["csr"] }
yew-router = "0.17.0"
reqwest = "0.11.14"
wasm-logger = "0.2.0"
log = "0.4.17"
gloo-net = "0.2.5"
wasm-bindgen-futures = "0.4.33"
wasm-bindgen = "0.2.83"
js-sys = "0.3.60"
yew-style-in-rs = "0.4.1"

[dependencies.web-sys]
version = "0.3"
features = [
  "Headers",
  "Request",
  "RequestInit",
  "RequestMode",
  "Response",
  "Window",
  'HtmlCanvasElement',
  'WebGlBuffer',
  'WebGlProgram',
  'WebGlRenderingContext',
  'WebGlShader',
  'WebGlUniformLocation',
]

[[bin]]
name = "yew_page"
required-features = ["yew/csr"]
